--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,18 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Build
 
 on:
   push:
   pull_request:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           java-version: '17'
@@ -25,19 +21,20 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
         with:
-          gradle-version: '7.6.1'
+          gradle-version: '8.4'
 
       - name: Build with Gradle
         run: gradle build
-
-      - name: Upload fabric mod
+      
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: fabric
-          path: fabric/build/libs/*.jar
+          name: artifact
+          path: build/libs/*.jar
 
-      - name: Upload forge mod
-        uses: actions/upload-artifact@v4
-        with:
-          name: forge
-          path: forge/build/libs/*.jar
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          gh release create ${{github.ref_name}} --generate-notes build/libs/*.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
