--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,13 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
         with:
-          gradle-version: '8.4'
+          gradle-version: '8.11'
 
       - name: Build with Gradle
         run: gradle build
@@ -32,15 +32,15 @@ jobs:
           name: fabric
           path: fabric/build/libs/*.jar
 
-      - name: Upload Artifact (Forge)
+      - name: Upload Artifact (NeoForge)
         uses: actions/upload-artifact@v4
         with:
-          name: forge
-          path: forge/build/libs/*.jar
+          name: neoforge
+          path: neoforge/build/libs/*.jar
 
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          gh release create ${{github.ref_name}} --generate-notes fabric/build/libs/*.jar forge/build/libs/*.jar
+          gh release create ${{github.ref_name}} --generate-notes fabric/build/libs/*.jar neoforge/build/libs/*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
