--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,18 @@
+# Done to increase the memory available to Gradle.
 org.gradle.jvmargs=-Xmx2G
-
-minecraft_version=1.20.1
-
-archives_base_name=RearCamMod
+org.gradle.parallel=true
+# Mod properties
 mod_version=1.0-SNAPSHOT
 maven_group=io.github.yuko1101
-
-architectury_version=9.1.12
-
-fabric_loader_version=0.14.24
-fabric_api_version=0.90.7+1.20.1
-
-forge_version=1.20.1-47.2.6
+archives_name=RearCamMod
+enabled_platforms=fabric,neoforge
+# Minecraft properties
+minecraft_version=1.21.4
+# Dependencies
+architectury_api_version=15.0.1
+fabric_loader_version=0.16.10
+fabric_api_version=0.115.1+1.21.4
+neoforge_version=21.4.78-beta
+# Mappings
+yarn_mappings=1.21.4+build.8
+yarn_mappings_patch_neoforge=1.21+build.4
