--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,13 @@ org.gradle.parallel=true
 mod_version=1.0-SNAPSHOT
 maven_group=io.github.yuko1101
 archives_name=RearCamMod
-enabled_platforms=fabric,neoforge
+#enabled_platforms=fabric,neoforge
+enabled_platforms=fabric
 # Minecraft properties
-minecraft_version=1.21.4
+minecraft_version=1.21.10
 # Dependencies
-fabric_loader_version=0.16.10
-neoforge_version=21.4.78-beta
+fabric_loader_version=0.17.3
+neoforge_version=21.10.20-beta
 # Mappings
-yarn_mappings=1.21.4+build.8
-yarn_mappings_patch_neoforge=1.21+build.4
+yarn_mappings=1.21.10+build.2
+yarn_mappings_patch_neoforge=1.21+build.6
